fixed sidenav button changes size when scrollbar appears/disappears

--- a/public/stylesheets/less/rp-sidenav.less
+++ b/public/stylesheets/less/rp-sidenav.less
@@ -174,6 +174,7 @@
     // color: #888;
     border-radius: 0;
     width: 100%;
+    max-width: 190px;
     margin: 0;
     text-transform: none;
     // font-weight: 600;
